fix spacing

--- a/app/blog/blog.module.css
+++ b/app/blog/blog.module.css
@@ -53,7 +53,8 @@
 .tagText {
   font-family: "Noto Sans";
   font-weight: 400;
-  font-size: 0.875rem;
+  /* font-size: 0.875rem; */
+  font-size: 14px;
   line-height: 20px;
   text-align: center;
   color: #15803d;
@@ -62,7 +63,8 @@
 .title {
   font-family: "Noto Sans";
   font-weight: 600;
-  font-size: 1.125rem;
+  /* font-size: 1.125rem; */
+  font-size: 18px;
   line-height: 28px;
   color: #171717;
 }
@@ -70,7 +72,8 @@
 .description {
   font-family: "Noto Sans";
   font-weight: 500;
-  font-size: 1rem;
+  /* font-size: 1rem; */
+  font-size: 16px;
   line-height: 24px;
   color: #525252;
   width: fit-content;
@@ -97,7 +100,8 @@
 .detailsContent a:link {
   font-family: "Noto Sans";
   font-weight: 500;
-  font-size: 1rem;
+  /* font-size: 1rem; */
+  font-size: 16px;
   line-height: 24px;
   color: #4338ca;
   text-decoration: none;
